--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,50 +8,131 @@
 
     
     <link rel="stylesheet/less" type="text/css" href="less/style.less" />
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
-      <script src="js/less-1.5.0.min.js" type="text/javascript"></script>
-      <!-- <link href="/font-awesome/css/font-awesome.css" rel="stylesheet"> -->
-      <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
+    <script src="js/jquery.js" type="text/javascript"></script>
+    <script src="js/less-1.5.0.min.js" type="text/javascript"></script>
+    <!-- <link href="/font-awesome/css/font-awesome.css" rel="stylesheet"> -->
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
+    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/custom.js"></script>
 
   </head>
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <!-- 
-              <a class="btn btn-navbar" data-toggle="collapse" data-target=".na\
-              v-collapse">
+    <nav class="navbar navbar-default navbar-static-top" role="navigation">
+    <a class="navbar-brand" href="#">Pallette</a>
+    <ul class="nav navbar-nav">
+      <li class="active">
+        <a href="#">Pallette</a>
+      </li>
+      <li class="dropdown" id="menu1">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#menu1">
+          Social Media
+          <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">twitter</a></li>
+          <li><a href="#">Google Plus</a></li>
+          <li class="divider"></li>
+          <li><a href="#">All Social Media</a></li>
+        </ul>
+      </li>
+      <li class="dropdown" id="menu1">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#menu2">
+          Tech
+          <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">twitter</a></li>
+          <li><a href="#">Google Plus</a></li>
+          <li class="divider"></li>
+          <li><a href="#">All Social Media</a></li>
+        </ul>
+      </li>
+      <li class="dropdown" id="menu1">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#menu3">
+          Business
+          <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">twitter</a></li>
+          <li><a href="#">Google Plus</a></li>
+          <li class="divider"></li>
+          <li><a href="#">All Social Media</a></li>
+        </ul>
+      </li>
+      <li class="dropdown" id="menu1">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#menu4">
+          Entertainment
+          <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">twitter</a></li>
+          <li><a href="#">Google Plus</a></li>
+          <li class="divider"></li>
+          <li><a href="#">All Social Media</a></li>
+        </ul>
+      </li>
+      <li class="dropdown" id="menu1">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#menu5">
+          US/UK WorldWide
+          <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">twitter</a></li>
+          <li><a href="#">Google Plus</a></li>
+          <li class="divider"></li>
+          <li><a href="#">All Social Media</a></li>
+        </ul>
+      </li>
+      <li class="dropdown" id="menu1">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#menu6">
+          Life Style
+          <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">twitter</a></li>
+          <li><a href="#">Google Plus</a></li>
+          <li class="divider"></li>
+          <li><a href="#">All Social Media</a></li>
+        </ul>
+      </li>
+      <li class="dropdown" id="menu1">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#menu7">
+          More
+          <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">twitter</a></li>
+          <li><a href="#">Google Plus</a></li>
+          <li class="divider"></li>
+          <li><a href="#">All Social Media</a></li>
+        </ul>
+      </li>
 
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                          <span class="icon-bar"></span>
-                        </a>
-           -->
-
-           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                
-		
-          <a class="brand" href="/">
-            <!-- 
-                {{ site.name }}
-             -->
-            <i class="fa fa-pagelines"></i> Palette
-            
-          </a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="/course">Home</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+      
+    </ul>
+    <ul class="nav navbar-nav pull-right">
+      <li>
+        <a href="#">Facebook</a>
+      </li>
+      <li>
+        <a href="#">twitter</a>
+      </li>
+      <li>
+        <a href="#">Linkedin</a>
+      </li>
+      
+    </ul>
+    
+  </nav>
 
     <div class="container">
+
