--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,13 +7,15 @@
     <meta name="description" content="{{ site.description }}">
 
     
-    <link rel="stylesheet/less" type="text/css" href="less/style.less" />
+    <link rel="stylesheet/less" type="text/css" href="/palette/less/style.less" />
+
     <script src="js/jquery.js" type="text/javascript"></script>
-    <script src="js/less-1.5.0.min.js" type="text/javascript"></script>
+    <script src="/palette/js/less-1.5.0.min.js" type="text/javascript"></script>
     <!-- <link href="/font-awesome/css/font-awesome.css" rel="stylesheet"> -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>
+
 
   </head>
 
