--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,22 +11,26 @@
 			  		<div class="col-lg-7 col-md-7">
 			  			<p class="muted">{{ page.date | date_to_long_string }}</p>
 			  			{{ content }}
+			  			<!--
 			  			<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="532" height="399" align="middle" id="Beyonce-Beauty-Secrets">
 
 			    			<param name="movie" value="{{ page.gamefile }}">
 
 			    			<param name="quality" value="high">
-			    			<param name="AllowScriptAccess" value="always"><!--[if !IE]>-->
+			    			<param name="AllowScriptAccess" value="always">
 
 			    			<object type="application/x-shockwave-flash" data="{{ page.gamefile }}" width="532" height="399">
 			    				<param name="movie" value="{{ page.gamefile }}">
 			    				<param name="quality" value="high">
-			    				<param name="AllowScriptAccess" value="always"><!--<![endif]--><a href="http://www.adobe.com/go/getflash">
-			    				<img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash Player"></a><!--[if !IE]>-->
+			    				<param name="AllowScriptAccess" value="always">
+			    				<a href="http://www.adobe.com/go/getflash">
+			    				<img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash Player"></a>
 
-			    			</object><!--<![endif]-->
+			    			</object>
+
 
 			    		</object>
+			    	-->
 			  		</div>
 					
 			  	</div>
